--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 	<modules>
 		<module>backend</module>
 		<module>open-api</module>
+		<module>common</module>
 	</modules>
 	<properties>
 		<java.version>23</java.version>
