--- a/open-api/api/v1/api-do-not-edit.yml
+++ b/open-api/api/v1/api-do-not-edit.yml
@@ -25,6 +25,7 @@ paths:
           name: id
           schema:
             type: integer
+            format: int64
           required: true
           description: ID of the project to retrieve
       responses:
@@ -33,15 +34,16 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Project"
+                $ref: "#/components/schemas/ProjectDto"
         "404":
           description: Project not found
 components:
   schemas:
-    Project:
+    ProjectDto:
       type: object
       properties:
         id:
-          type: int
+          type: integer
+          format: int64
         name:
           type: string
