--- a/pom.xml
+++ b/pom.xml
@@ -23,4 +23,28 @@
 		<java.version>23</java.version>
 	</properties>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.diffplug.spotless</groupId>
+				<artifactId>spotless-maven-plugin</artifactId>
+				<version>2.43.0</version> <!-- Adjust version as necessary -->
+				<configuration>
+<!--					<ratchetFrom>origin/master</ratchetFrom>-->
+					<java>
+						<googleJavaFormat/>
+					</java>
+				</configuration>
+				<executions>
+					<execution>
+						<id>spotless-check</id>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<phase>verify</phase>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
