Add TestContainers and ProjectRepositoryImplTest

--- a/open-api/api/v1/api-do-not-edit.yml
+++ b/open-api/api/v1/api-do-not-edit.yml
@@ -47,3 +47,9 @@ components:
           format: int64
         name:
           type: string
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
