--- a/open-api/api/v1/api-do-not-edit.yml
+++ b/open-api/api/v1/api-do-not-edit.yml
@@ -18,6 +18,8 @@ servers:
 paths:
   /projects/{id}:
     get:
+      tags:
+        - projects
       summary: Get project by ID
       operationId: getProjectById
       parameters:
