init sql tables

--- a/backend/src/main/resources/db/changelog/db.changelog-master.yml
+++ b/backend/src/main/resources/db/changelog/db.changelog-master.yml
@@ -8,3 +8,13 @@ databaseChangeLog:
             relativeToChangelogFile: true
       author: "I.B"
       id: "1"
+
+  - changeSet:
+      changes:
+        - sqlFile:
+            dbms: "postgresql"
+            encoding: "UTF-8"
+            path: "scripts/init_tables_v2.sql"
+            relativeToChangelogFile: true
+      author: "I.B"
+      id: "2"
