--- a/open-api/api/v1/api-do-not-edit.yml
+++ b/open-api/api/v1/api-do-not-edit.yml
@@ -42,7 +42,7 @@ paths:
   /projects/summary:
     get:
       tags:
-        - projects summaries
+        - projects
       summary: Get projects summaries
       operationId: getProjectsSummaries
       responses:
@@ -103,6 +103,8 @@ components:
           type: integer
           format: int64
         name:
+          type: string
+        logoUrl:
           type: string
         title:
           type: string
