--- a/open-api/openapi-yaml-files/project.yml
+++ b/open-api/openapi-yaml-files/project.yml
@@ -35,7 +35,7 @@ paths:
   /projects/summary:
     get:
       tags:
-        - projects summaries
+        - projects
       summary: Get projects summaries
       operationId: getProjectsSummaries
       responses:
@@ -98,6 +98,8 @@ components:
           type: integer
           format: int64
         name:
+          type: string
+        logoUrl:
           type: string
         title:
           type: string
